--- a/AOS/app/src/main/res/layout/fragment_my_charger_reservation.xml
+++ b/AOS/app/src/main/res/layout/fragment_my_charger_reservation.xml
@@ -22,10 +22,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="180dp"
             android:src="@drawable/register_charger_onboarding_img"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintStart_toEndOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_empty_point_history"
@@ -33,9 +34,10 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@string/empty_charger_reservation_list"
+            android:textAlignment="center"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textAlignment="center"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="@id/iv_empty_state"
             app:layout_constraintStart_toStartOf="@id/iv_empty_state"
             app:layout_constraintTop_toBottomOf="@id/iv_empty_state" />
