--- a/AOS/app/src/main/res/layout/point_history_item.xml
+++ b/AOS/app/src/main/res/layout/point_history_item.xml
@@ -5,8 +5,8 @@
     <data>
 
         <variable
-            name="viewModel"
-            type="com.softeer.team6four.ui.mypage.point.MyPointViewModel" />
+            name="model"
+            type="com.softeer.team6four.data.remote.payment.model.PointHistoryDetailModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -43,6 +43,7 @@
             android:layout_marginTop="10dp"
             android:textColor="@color/gray_500"
             android:textSize="12sp"
+            android:text="@{model.createdDate}"
             app:layout_constraintStart_toStartOf="@id/start_guide_line"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,6 +54,7 @@
             android:layout_marginTop="8dp"
             android:textSize="16sp"
             android:textStyle="bold"
+            android:text="@{model.pointTitle}"
             app:layout_constraintStart_toStartOf="@id/tv_point_charge_date"
             app:layout_constraintTop_toBottomOf="@+id/tv_point_charge_date" />
 
@@ -62,6 +64,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/black"
             android:textSize="16sp"
+            android:text="@{model.amount}"
             app:layout_constraintEnd_toEndOf="@id/end_guide_line"
             app:layout_constraintTop_toTopOf="@id/tv_charger_title" />
 
